# vim-fugitive

./: .gitattributes  CMakeLists.txt  CONTRIBUTING.markdown  LICENSE  README.markdown  SECURITY.md  browse_handlers
.github/: FUNDING.yml  googlec3736dd342ad29c5%20(5).html
appstream/: vim-fugitive.metainfo.xml
autoload/: fugitive.vim
doc/: fugitive.txt
ftdetect/: fugitive.vim
ftplugin/: fugitive.vim
plugin/: fugitive.vim
registry/: vim-fugitive.yaml
syntax/: fugitive.vim  fugitiveblame.vim
